testsuite/single/tests/compiler/fail/no_ret_type.crlf.c
#pragma strict_types

foo() {
}
